# timet-tui

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix
.github/workflows/: publish-binaries.yaml  pull-request.yaml  relase-please.yaml
src/: api.rs  config.rs  hours.rs  lib.rs  main.rs  model.rs  project.rs  store.rs  ui.rs
src/config/: setup.rs
testdata/: april.json  config.toml
