[package]
name = "timet-tui"
version = "0.2.0"
authors = ["Dag Østgulen Heradstveit <190020+scav@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
build = "build.rs"

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
eyre = "0.6"
color-eyre = "0.6"
chrono = "0.4"
toml = "0.8"
minreq = { version = "2", features = ["https-rustls-probe", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
