[package]
name = "timet-tui"
version = "0.5.0"
authors = ["Dag Østgulen Heradstveit <190020+scav@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
build = "build.rs"

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
log = "0.4"
fern = "0.7"
eyre = "0.6"
color-eyre = {version ="0.6", default-features = false }
chrono = { version = "0.4", features = ["serde"]}
toml = "0.9"
minreq = { version = "2", features = ["https-rustls-probe", "json-using-serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
humantime = "2.3.0"
thiserror = "2.0.17"
keyring = {version ="3.6", features = ["apple-native"]}
clap = {version ="4.5", features = ["derive","help" ]}
whoami = "1.6.1"


